:sparkles: feat: adding authentication and route protection

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ dependencies = [
     "fastapi[standard]>=0.115.14",
     "pwdlib[argon2]>=0.2.1",
     "pydantic-settings>=2.10.1",
+    "pyjwt>=2.10.1",
     "sqlalchemy>=2.0.41",
+    "tzdata>=2025.2",
 ]
 
 [dependency-groups]
