--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-DATABASE_URL = 'sqlite:///database.db'
+DATABASE_URL = sqlite:///database.db
+SECRET_KEY = your_secret_key
+ALGORITHM = your_algorithm
+ACESS_TOKEN_EXPIRE_MINUTES = 30
