:recycle: refactor: changing to postgresql database

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-DATABASE_URL = sqlite+aiosqlite:///database.db
+DATABASE_URL = postgresql+psycopg://app_user:app_password@localhost:5432/app_db
 SECRET_KEY = your_secret_key
 ALGORITHM = your_algorithm
 ACESS_TOKEN_EXPIRE_MINUTES = 30
+
+POSTGRES_DB=app_db
+POSTGRES_USER=app_user
+POSTGRES_PASSWORD=app_password
